# gollum

./: .gitignore  LICENSE  README.md  pyproject.toml
gollumpy/: __init__.py  gollum.py
gollumpy/resources/: acro.short_arm.T2T.bed
test/: C0011LO.disc.cram  C0011LO.disc.cram.crai  blacklist.bed
test/output/: C0011LO.read2.blat.tsv  C0011LO.read2_for_blat.fasta  C0011LO.supporting_reads.tsv
